完成大整数类的编写

--- a/Learn2Program4Blockchain.vcxproj
+++ b/Learn2Program4Blockchain.vcxproj
@@ -132,6 +132,7 @@
     <ClInclude Include="FiniteField.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BigInteger.h" />
     <ClCompile Include="ECCTest.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
