--- a/Learn2Program4Blockchain.vcxproj.filters
+++ b/Learn2Program4Blockchain.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClCompile Include="ECCTest.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="BigInteger.h">
+      <Filter>头文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
