完善BigInteger头文件逻辑，独立SECP256K1类，并做简单的桩模块。

--- a/Learn2Program4Blockchain.vcxproj
+++ b/Learn2Program4Blockchain.vcxproj
@@ -130,6 +130,7 @@
     <ClInclude Include="ECC.h" />
     <ClInclude Include="EllipticPoint.h" />
     <ClInclude Include="FiniteField.h" />
+    <ClInclude Include="SECP256K1.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BigInt.h" />
